log

Sat Mar 12 04:06:23 UTC 2022: 
test.c: In function ‘suma’:
test.c:250:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: ‘sumaN’ defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1: all warnings being treated as errors
Compilation failed
2a82c6e
Sat Mar 12 04:08:40 UTC 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     c= a+b;
      ^
exercises.c:16:10: error: ‘return’ with a value, in function returning void [-Werror]
   return c;
          ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
97d44c1
Sat Mar 12 04:08:54 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:10: error: ‘return’ with a value, in function returning void [-Werror]
   return c;
          ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c) {
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
88e52a1
Sat Mar 12 04:09:04 UTC 2022: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|6
total_score: 10/70
8705404
Sat Mar 12 04:10:09 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
9e9cdd1
Sat Mar 12 04:10:18 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
9a3f71d
Sat Mar 12 04:14:23 UTC 2022: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:39:20: error: expected ‘;’ before ‘)’ token
   for(int i =0; i<n){
                    ^
Compilation failed
1bddb4b
Sat Mar 12 04:17:57 UTC 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:39:20: error: expected ‘;’ before ‘)’ token
   for(int i =0; i<n){
                    ^
Compilation failed
ecdfec1
Sat Mar 12 04:18:37 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:39:20: error: expected ‘;’ before ‘)’ token
   for(int i =0; i<n){
                    ^
Compilation failed
78d0049
Sat Mar 12 04:19:19 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
1d505f1
Sat Mar 12 04:19:34 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
6286e25
Sat Mar 12 04:20:21 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4daa32d
Sat Mar 12 04:20:37 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
51ec415
Sat Mar 12 04:20:50 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ce4ec15
Sat Mar 12 04:22:51 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f0eb0fe
Sat Mar 12 04:23:26 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b7305d1
Sat Mar 12 04:23:55 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:39:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   for(int i <n; i==0; i--){
             ^
exercises.c:39:17: error: ‘i’ undeclared (first use in this function)
   for(int i <n; i==0; i--){
                 ^
exercises.c:39:17: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:39:21: error: expected ‘)’ before ‘;’ token
   for(int i <n; i==0; i--){
                     ^
Compilation failed
5d96a8f
Sat Mar 12 04:24:31 UTC 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
3efecdf
Sat Mar 12 04:26:53 UTC 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
test.c: In function ‘sumaNultimos’:
exercises.c:41:10: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     while(j<=m){
          ^
cc1: all warnings being treated as errors
Compilation failed
ea59ee1
Sat Mar 12 04:27:13 UTC 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e4af5c9
Sat Mar 12 04:27:57 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
88f10e7
Sat Mar 12 04:30:12 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c:46:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
4fc685a
Sat Mar 12 04:30:31 UTC 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c:48:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
873be3e
Sat Mar 12 04:30:58 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c:48:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
777252d
Sat Mar 12 04:31:13 UTC 2022: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 10/70
79a996a
Sat Mar 12 04:34:04 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f78cfde
Sat Mar 12 04:37:39 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
a7243ed
Sat Mar 12 04:37:49 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b8650be
Sat Mar 12 04:42:55 UTC 2022: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
b0764b1
Sat Mar 12 04:48:46 UTC 2022: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 20/70
de92f1e
Sat Mar 12 04:49:12 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
e920f69
Sat Mar 12 04:50:11 UTC 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:66:12: error: ‘p’ is a pointer; did you mean to use ‘->’?
   strcpy (p.edad,"38");
            ^
            ->
Compilation failed
da53d9f
